--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>Cascading Styles</title>
     <style>
         .text-area {
-            color: hotpink;
+            color: hotpink; !important;
         }
 
         p {
-            color: purple; !important;
+            color: purple; 
         }
     </style>
 </head>
