--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <title>Cascading Styles</title>
     <style>
         .text-area {
-            color: hotpink; 
+            color: purple 
         }
 
         p {
-            color: purple; rgb (128, 0, 128)
+            color: hotpink 
         }
+
+    
+
     </style>
 </head>
 
